# 2022_tracking

./: .rosinstall  .rosinstall.bak  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/mav_comm/: .catkin  local_setup.sh
devel/.private/mav_msgs/: .catkin  local_setup.sh  setup.sh
devel/.private/mav_planning_msgs/: .catkin  setup.sh
devel/.private/mav_state_machine_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/mav_system_msgs/: .catkin  local_setup.sh  setup.sh
devel/.private/rotors_comm/: .catkin  .rosinstall  setup.sh
devel/.private/rotors_control/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_description/: .catkin  _setup_util.py  setup.sh
devel/.private/rotors_evaluation/: .catkin  .rosinstall  setup.sh
devel/.private/rotors_gazebo/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/.private/rotors_gazebo_plugins/: .catkin  setup.sh
devel/.private/rotors_hil_interface/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_joy_interface/: .catkin  local_setup.sh
devel/.private/rotors_simulator/: .catkin
devel/.private/rqt_rotors/: .catkin  .rosinstall  local_setup.sh
devel/include/mav_msgs/: Actuators.h  AttitudeThrust.h  FilteredSensorData.h  GpsWaypoint.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
devel/include/mav_planning_msgs/: ChangeNameService.h  ChangeNameServiceRequest.h  ChangeNameServiceResponse.h  PlannerService.h  PlannerServiceRequest.h  PlannerServiceResponse.h  Point2D.h  PointCloudWithPose.h  Polygon2D.h  PolygonService.h  PolygonServiceRequest.h  PolygonServiceResponse.h  PolygonWithHoles.h  PolygonWithHolesStamped.h  PolynomialSegment.h  PolynomialSegment4D.h  PolynomialTrajectory.h  PolynomialTrajectory4D.h
devel/include/mav_state_machine_msgs/: RunTaskService.h  RunTaskServiceRequest.h  RunTaskServiceResponse.h  StartStopTask.h
devel/include/mav_system_msgs/: CpuInfo.h  ProcessInfo.h
devel/include/rotors_comm/: Octomap.h  OctomapRequest.h  OctomapResponse.h  RecordRosbag.h  RecordRosbagRequest.h  RecordRosbagResponse.h  WindSpeed.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  rotors_comm.pc  rotors_control.pc  rotors_description.pc  rotors_evaluation.pc  rotors_gazebo.pc  rotors_gazebo_plugins.pc  rotors_hil_interface.pc  rotors_joy_interface.pc  rqt_rotors.pc
devel/lib/rotors_control/: lee_position_controller_node  roll_pitch_yawrate_thrust_controller_node
devel/lib/rotors_evaluation/: disturbance_eval.py  hovering_eval.py  waypoints_eval.py
devel/lib/rotors_gazebo/: colour_based_detection  hovering_example  (+3 more)
install/: install_https.rosinstall  install_ssh.rosinstall
logs/mavlink/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/rotors_control/: build.cmake.000.log.stderr
logs/rotors_gazebo/: build.check.002.log.stderr  build.cmake.000.log.stderr
logs/rotors_gazebo_plugins/: build.cmake.000.log.stderr
logs/rotors_hil_interface/: build.cmake.000.log.stderr  build.make.000.log.stderr
pose_estimate/: CMakeLists.txt  package.xml
pose_estimate/src/: pose.cpp
rotors_simulator/: .gitignore
rotors_simulator/rotors_gazebo/: CMakeLists.txt
simulator/: CMakeLists.txt
simulator/launch/: default.launch  husky.launch  mav_hovering_example.launch  simulation.launch
simulator/urdf/: mav.xacro
simulator/worlds/: default.world
src/rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
src/rotors_simulator/rotors_gazebo/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
src/rotors_simulator/rotors_gazebo/devel/.private/catkin_tools_prebuild/: .catkin
src/rotors_simulator/rotors_gazebo/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
src/rotors_simulator/rotors_gazebo/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
src/rotors_simulator/rotors_gazebo/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
src/rotors_simulator/rotors_gazebo/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
src/rotors_simulator/rotors_gazebo/launch/: mav_hovering_example.launch
src/rotors_simulator/rotors_gazebo/logs/catkin_tools_prebuild/: build.symlink.001.log.stderr  build.symlink.002.log.stderr
src/rotors_simulator/rotors_gazebo/src/: colour_based_detection.cpp
tracking/: CMakeLists.txt
tracking/launch/: tracker.launch
tracking/src/: tracker.cpp  trackerKCF.cpp  tracker_node.cpp
(+353 files in other folders)
